[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-horizon"
version = "1.0.1"
authors = [
  { name="Americo Simoes", email="your-email@example.com" },
]
description = "Real-time Manifold Observer for the Sovereign Trinity"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
]

[tool.setuptools]
py-modules = ["streamer", "observer", "horizon_stream"]

[tool.setuptools.package-data]
"*" = ["index.html"]

[project.scripts]
horizon-watch = "streamer:app"
